--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force",
-    "build": "vite build --mode production --silent",
+    "build": "vite build --mode production",
     "build:check": "tsc -b --noCheck && vite build",
     "build:force": "vite build --mode production",
     "lint": "eslint . --fix",
