--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dev:no-check": "vite --host --force"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@react-navigation/native": "^7.1.11",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
